# xdg-desktop-portal-zenzai

./: .gitignore  Cargo.toml  LICENSE  README.md  demo-config.toml  meson.build
share/: org.freedesktop.impl.portal.desktop.zenzai.service.in  porta.portal  xdg-desktop-portal-zenzai.service.in  zenzai.portal
share/dbus-1/services/: org.freedesktop.impl.desktop.porta.service  org.freedesktop.impl.desktop.zenzai.service
share/systemd/user/: xdg-desktop-portal-porta.service  xdg-desktop-portal-zenzai.service
share/xdg-desktop-portal/portals/: zenzai.portal
src/: config.rs  constants.rs  main.rs  terminal.rs
src/portals/: mod.rs
src/portals/appchooser/: config.rs  desktop_files.rs  mod.rs  run_command.rs  service.rs
src/portals/secret/: config.rs  service.rs
src/portals/settings/: config.rs  constants.rs  mod.rs  service.rs
src/utils/: hashmap.rs
