[package]
name = "xdg-desktop-portal-zenzai"
description = "A collection of several xdg-desktop-portal implementations to serve more lightweight wayland compositors like Hyprland"
version = "0.3.3"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
csscolorparser = "0.8.1"
rand = "0.9.2"
rust-ini = "0.21.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
which = "8.0.0"
zbus = { version = "5.13.0", features = ["tokio"] }
zvariant = "5.9.1"
