[package]
name = "xdg-desktop-portal-zenzai"
description = "A collection of several xdg-desktop-portal implementations to serve more lightweight wayland compositors like Hyprland"
version = "0.3.5"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
csscolorparser = "0.8.3"
rand = "0.10.2"
rust-ini = "0.21.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
which = "8.0.5"
zbus = { version = "5.17.0", features = ["tokio"] }
zvariant = "5.13.0"
